2011-11-11  Valek Filippov

		* XLS: add Ptg definitions for future parsing.

2011-11-05  Valek Filippov

		* Little code clean-up.

2011-11-04  Valek Filippov

		* "$esc" was not in Help->Manual.
		* VSD: fix the date.

2011-11-03  Valek Filippov

		* VSD: small addition to TextField, change date to date/time.

2011-10-31  Valek Filippov

		* XLS: parse RK (not sure about RkNum for fint = 0), add 'RK' into search list.

2011-10-28  Valek Filippov

		* Add short manual.

2011-10-26  Valek Filippov

		* Add command history (arrow up/down to navigate)
		* Add row expand/collapse with arrow right/left.

2011-10-25  Valek Filippov

		* VSD: fix ability to save.
		* XLS: preparation for XLS-specific search.
		* XLS: search for cell phase 1.

2011-10-23  Valek Filippov

		* MDB: more fields in table_def.

2011-10-20  Valek Filippov

		* VSD: textfield parsing improvements.
		* VBA: change inflate_vba for XLS.
		* MDB: more fields in table_def.

2011-10-18  Valek Filippov

		* MDB: added initial support, ported some data from mdbtools.

2011-10-14  Valek Filippov

		* XLS: save/insert/more/less implemented

2011-10-10  Valek Filippov

		* XLS: more records parsing.

2011-10-09  Valek Filippov

		* EMF+: fix saving of modified records.

2011-10-06  Valek Filippov

		* FH: adjust parsing of records based on 64k+ files.

2011-10-01  Valek Filippov

		* FH: saving.

2011-09-31  Valek Filippov

		* XLS: xls.parse didn't return page.type

2011-09-30  Valek Filippov

		* XLS: parse CellXF part of XF record.

2011-09-29  Valek Filippov

		* FH: XForm parsing based on flags

2011-09-27  Valek Filippov

		* FH: More records parsing, rewrite Xform as two parts record.
		* ?r command with a/u/x subargs.

2011-09-25  Valek Filippov

		* FH: more records parsing.

2011-09-23  Valek Filippov

		* Fix hexdump scrolling.
		* Improve FH detection.

2011-09-19  Valek Filippov

		* VSD: unstable support for ver 5.

2011-09-18  Valek Filippov

		* FH: show FH8 dictionary.
