@@ -1,3 +1,7 @@
+2011-11-14  Valek Filippov
+
+		* XLS: start to parse Lbl.
+
 2011-11-11  Valek Filippov
 
 		* XLS: add Ptg definitions for future parsing.
